# DVC-Demo

./: .gitignore  CLAUDE.md  DEVELOPER_GUIDE.md  README.md  USER_GUIDE.md
brevis-verification-demo/: .gitignore  Cargo.toml  README.md  rust-toolchain
brevis-verification-demo/src/: main.rs
dvc-brevis-program/: .gitignore  Cargo.toml  README.md
dvc-brevis-program/src/: errors.rs  main.rs
dvc-brevis-prover/: .gitignore  Cargo.toml  README.md
dvc-brevis-prover/src/: main.rs
dvc-client/: .env.example  README.md  package.json
dvc-client/demo/: demo_binance.js  demo_okx-grumpkin-commitment.js  demo_okx.js  get_result.js  list_program.js  list_tasks.js  submit_task.js  upload_program.js
dvc-client/src/: prover_client.js  proxy.js  utils.js  zktls_client.js
dvc-service/: .env.example  .gitignore  README.md  main.py  requirements.txt
dvc-service/certs/: ca.crt  ca.key  gen_certs.sh  server.crt  server.csr  server.key
dvc-succinct-program/: Cargo.toml
dvc-succinct-program/src/: errors.rs  main.rs
dvc-succinct-prover/: Cargo.toml  README.md
dvc-succinct-prover/src/: main.rs
noir-verification-demo/: .gitignore  README.md  docker-compose.yml  package.json
noir-verification-demo/att_verifier_lib/: Nargo.toml
noir-verification-demo/att_verifier_lib/src/: lib.nr
noir-verification-demo/att_verifier_parsing/: package.json
noir-verification-demo/aztec-attestation-sdk/src/core/: Client.ts
noir-verification-demo/contracts/binance_verifier/: Nargo.toml
noir-verification-demo/contracts/binance_verifier/src/: main.nr
noir-verification-demo/scripts/: deploy-contract.ts  local-verify-binance.ts  package.json
noir-verification-demo/testdata/: binance-attestation.json
succinct-verification-demo/: Cargo.toml  README.md
succinct-verification-demo/src/: main.rs
testdata/: hash_comparsion.json
