[package]
name = "dvc-brevis-prover"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
pico-sdk = { git = "https://github.com/brevis-network/pico", rev = "d67fb438" }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
alloy-sol-types = "0.8.0"
hex = "0.4"
structopt = "0.3"
