[package]
version = "0.1.0"
name = "dvc-succinct-prover"
edition = "2021"
resolver = "2"

[dependencies]
sp1-sdk = { version = "5.2.2", features = ["network"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
dotenv = "0.15.0"
bincode = "1.3.3"
tokio = "1.48.0"
hex = "0.4.3"

